Fix input on iOS

--- a/src/components/SearchBox/SearchBox.css
+++ b/src/components/SearchBox/SearchBox.css
@@ -1,6 +1,11 @@
 .SearchBox {
   border: 1px solid #e0e0e0; /* Alto */
-  border-radius: 4px;
+  border-radius: 0;
+
+  /* Fix input element rounding on iOS */
+  -webkit-appearance: none;
+  -webkit-border-radius: 4px;
+
   font-size: 1.25rem;
   padding: 4px;
 
